<resources>
    <string name="app_name">Driver Sudan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_credit">Add Credit</string>
    <string name="promohistory">Promocode History</string>
    <string name="statistics">Statistics</string>
    <string name="build_version">V 3.0</string>
    <string name="change_car">Change</string>
    <string name="edit_profile">Edit</string>
    <string name="help">Help</string>
    <string name="waybill">Waybill</string>
    <string name="Document">Document</string>
    <string name="payment">Payment</string>
    <string name="about">About</string>
    <string name="Logout">Logout</string>
    <string name="RIDERFEEDBACK">RIDER FEEDBACK</string>
    <string name="protrips">PRO TRIPS</string>
    <string name="checkout">Check out feedback from riders and learn how to improve</string>
    <string name="protriptext">Sharpen your skills with expert advice on drive best practices</string>
    <string name="issues">ISSUES</string>
    <string name="comments">COMMETNS</string>
    <string name="hint_name">Username or email</string>
    <string name="signin">SIGN IN</string>
    <string name="forgetpass">FORGET PASSWORD ?</string>
    <string name="view_profile">View</string>
    <string name="sname">FIRST NAME</string>
    <string name="lname">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="mobile">MOBILE</string>
    <string name="address1">ADDRESS 1</string>
    <string name="address2">ADDRESS 2</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="postcode">POSTAL CODE</string>
    <string name="inviteto">INVITE TO EARN MORE</string>
    <string name="promotion">PROMOTIONS</string>
    <string name="Makemore">Make more</string>
    <string name="invites">INVITES</string>
    <string name="eranmoremoney">Earn an extra SAR600 for every frind you reter to drive</string>
    <string name="triphistory">TRIP HISTORY</string>
    <string name="totalpayout">TOTAL PAYOUT</string>
    <string name="findtrip">Find trips toward destination (Soon)</string>
    <string name="Online">Online</string>
    <string name="offline">Offline</string>
    <string name="home">Home</string>
    <string name="earn">Earnings</string>
    <string name="rate">Ratings</string>
    <string name="profile">Profile</string>
    <string name="changelang">Change language</string>
    <string name="fontstring">fonts/Montserrat-Regular.ttf</string>
    <string name="mapKey">AIzaSyAyKWcogS2vgE52G5ZBj9IXtgqQ7n3cP5A</string>
    <string name="decline">Dicline</string>
    <string name="accept">Accept</string>
    <string name="Colon"> : </string>
    <string name="min">M</string>
    <string name="seconds">0  </string>
    <string name="accept_time">Accept time</string>
    <string name="sec">sec</string>
    <string name="notes">Notes</string>
    <string name="droploc">Drop location</string>
    <string name="picklocation">Pick Location</string>
    <string name="name">Name</string>
    <string name="currentrate">CURRENT RATTING</string>
    <string name="requestaccepted">REQUEST ACCEPTED</string>
    <string name="tripscancelded">TRIPS CANCELED</string>
    <string name="tripCost">Trip Cost</string>
    <string name="startingposint">Starting Point</string>
    <string name="arrivalposint">Arrival Point</string>
    <string name="totaldistance">Total Distance</string>
    <string name="watingtimecost">Watting Time Cost</string>
    <string name="taxes">Taxes</string>
    <string name="totalCost">Total Cost</string>
    <string name="payNow">Pay Now</string>
    <string name="youhavenewtrip">You have new trip</string>
    <string name="locatioofride">Location of ride</string>
    <string name="arrivallocation">Arrival location</string>
    <string name="distance">DISTANCE</string>
    <string name="arriced">I have reach the place</string>
    <string name="startthetrip">Start the trip</string>
    <string name="endofthetrip">End the trip now</string>
    <string name="tripcompleted">Trip completed successfully</string>
    <string name="backtomain">Back to main screen</string>
    <string name="Call">Call customer</string>
    <string name="watingtime">Waiting time</string>
    <string name="speed">Speed</string>
    <string name="totalkm">Total Km</string>
    <string name="pass">Password</string>
    <string name="enteryourphonenum">Enter your mobile number to change your password</string>
    <string name="mobile_num_hint">Mobile Number</string>
    <string name="done">Done</string>
    <string name="textone">DISCOVER</string>
    <string name="calender">EXPERIENCE </string>
    <string name="shopping">FRIENDSHIP</string>
    <string name="social_network">DIVERSITY </string>
    <string name="notification">Notification</string>
    <string name="text_one">With yalla you will be safe and you will rich any place easy </string>
    <string name="text_two">travel like you have never before</string>
    <string name="text_three">Make new friends and meet new people</string>
    <string name="text_four">Different choices to meet your needs</string>
    <string name="Ratepassanger">Rate Passenger Now</string>
    <string name="Passengerrate">Passenger Current Rate</string>
    <string name="Driverdoc">Driver Documents</string>
    <string name="drivinglic">Driving Licenes</string>
    <string name="Documents">Documents</string>
    <string name="Iqama">Iqama</string>
    <string name="JobCard">Job Card</string>
    <string name="vehicleRegistration">Vehicle Registration</string>
    <string name="vehicleinsurance">Vehicle Insurance</string>
    <string name="softwarelicesns">Software Licenses</string>
    <string name="maplicenses">Google Map Licenses</string>
    <string name="Aboutthisvirsion">About This version</string>
    <string name="supportmessage">Support Messages</string>
    <string name="tripandfarereview">Trips and Fare Review</string>
    <string name="paymentandaccount">Account and Payment</string>
    <string name="guidtodrivwithyalla">Guide to driving with Yalla</string>
    <string name="signningup">Signning Up</string>
    <string name="More">More</string>
    <string name="Yorcodeis">YOUR INVITE CODE</string>
    <string name="copycode">COPY INVITE CODE</string>
    <string name="Shareonsocail">Share to social network</string>
    <string name="invitetocontacts">Invite your contacts</string>
    <string name="Message">Message</string>
    <string name="EnterYourPassAndNum">Mobile and password should be entered</string>
    <string name="SiningIN">SiningIn ...</string>
    <string name="phonenotexist">Phone not exist</string>
    <string name="passwordwrong">Password wrong</string>
    <string name="accountdeactivated">This account not active yet</string>
    <string name="userLoginal">this account is login</string>
    <string name="logout">logout... please wait</string>
    <string name="drivershift">You Are Offline now</string>
    <string name="onlinenow">You Are Online Now</string>
    <string name="locationchanged">Location changed</string>
    <string name="feedback">Feedback</string>
    <string name="login">Login</string>
    <string name="signup">Having No Account</string>
    <string name="signupnow">SIGNUP NOW</string>
    <string name="Commpletedtrips">Commpleted Trips</string>
    <string name="duration">DURATION</string>
    <string name="passangerinfo">Passenger Information :</string>
    <string name="tripinfo">Trip Information</string>
    <string name="changepass">Change Password</string>
    <string name="enteryourpass">Enter Your Old Password</string>
    <string name="enternewpass">Enter Your New Password</string>
    <string name="passchange">Password Changed successfully</string>
    <string name="oldpassnotcorrect">Old Password Incorrect</string>
    <string name="areyousure">Are you sure?</string>
    <string name="needtologout">Want to Logout!</string>
    <string name="yeslogmeout">Yes,Log me out!</string>
    <string name="LOADING">Loading</string>
    <string name="email_hint"></string>
    <string name="youcancamcelthetrip">You Can Cancel the trip</string>
    <string name="Youhavenonewnoti">You Don\'t Have Any Notification</string>
    <string name="exprireDate">Expire Date :</string>
    <string name="youwanttocancelthetrip">You want to cancel this trip</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="viewvVehicleLicenseUrl">view vehicle license</string>
    <string name="viewvVehicleinsuranceUrl">view vehicle Insurance</string>
    <string name="viewvdriverinsuranceUrl">view driver license</string>
    <string name="paletNumber">Palet Number</string>
    <string name="Color">Color</string>
    <string name="model">Model</string>
    <string name="youareloggedout">You are loged out from the system</string>
    <string name="AreYou">Are you want to leav the App ?</string>
    <string name="LEAVEAPP">LAEVE APP NOW !</string>
    <string name="basefare">Base Fare</string>
    <string name="Promotion">Promotion</string>
    <string name="thereisanerror">there\'s an error ... try again</string>
    <string name="youareintripnow">You are in trip now ..</string>
    <string name="Youcancelthetrip">You cancel the trip</string>
    <string name="timeout">Time out</string>
    <string name="invalidtrip">Invalid Trip</string>
    <string name="tripAccepted">Trip Accepted</string>
    <string name="tripconfrimed">Trip Already Conformed</string>
    <string name="message">Message</string>
    <string name="VehicleDetails">Vehicle Details</string>
    <string name="loginsucceeded">login succeeded</string>
    <string name="ProfileDetial">Profile Details</string>
    <string name="AccountType">Account Type</string>
    <string name="passengercancelthetrip">The trip was canceled by the passenger</string>
    <string name="PasswordsendbySMS">New password send by sms</string>
    <string name="promotionhis">Promotion History</string>
    <string name="myLocation">My Location</string>
    <string name="noearningyet">There are no profits yet</string>
    <string name="Savetowallet">Save To Wallet</string>
    <string name="entermoneyamount">Enter money amount :-</string>
    <string name="amountaddedsccessfully">amount added successfully</string>
    <string name="dialog_cancell">Cancel</string>
    <string name="dialog_okk">Ok</string>
    <string name="profithis">Profit history</string>
    <string name="profitforcurrentmonth">Profit for current month</string>
    <string name="changedate">Change date</string>
    <string name="paywithWallet">Pay with wallet</string>
    <string name="noenofmoney">There is no enough in passenger wallet</string>
    <string name="lastsixmonth">Last six month</string>
    <string name="weekprofit">Week profit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="driverhasnotaxi">Driver has no taxi</string>
    <string name="No_earning_history">No earning history</string>
    <string name="trip_Already_cancelled">trip Already cancelled</string>
    <string name="trip_already_completed">Trip already completed</string>
    <string name="Invalid_Trip_Status">Invalid Trip Status</string>
    <string name="Driver_not_logged_in">You are not login</string>
    <string name="in_progress">Trip in progress</string>
    <string name="TripConfirmed">Trip Confirmed</string>
    <string name="Waiting_for_payment">Waiting for payment</string>
    <string name="Start_to_pick">Start to pick passenger</string>
    <string name="ooops">Oooops!</string>
    <string name="NoInternter">No internet connection found . Check your connection</string>
    <string name="tryagin">Try Again</string>
</resources>