<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asi.yalla_egy.LoginSignup"
    android:background="@drawable/sudback"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/backlogo"
            android:layout_gravity="center"
            />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:src="@drawable/unicomlog"
            android:layout_gravity="right"
            android:padding="10dp"
            />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="test"
            android:paddingTop="15dp"
            app:fb_borderColor="#FFFFFF"
            app:fb_borderWidth="1dp"
            app:fb_textFont="@string/fontstring"
            app:fb_defaultColor="@color/colorPrimary"
            app:fb_focusColor="@color/Wheat"
            app:fb_iconPosition="left"
            app:fb_radius="3dp"
            app:fb_text="@string/login"
            app:fb_textColor="#FFFFFF" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/signup"
                android:textSize="17sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signupnow"
                android:textSize="17sp"
                android:layout_marginStart="3dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
