<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_nointernet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asi.yalla_egy.NOInternetActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/nointerneticon"
        android:id="@+id/noInterntiv"
        android:tint="#b4b6b7"
        android:layout_marginTop="100dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ooops"
        android:textAlignment="center"
        android:layout_below="@id/noInterntiv"
        android:textColor="#3e3f40"
        android:id="@+id/tvoops"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NoInternter"
        android:textAlignment="center"
        android:layout_below="@id/tvoops"
        android:textColor="#b4b6b7"
        android:id="@+id/tvmessgae"
        />

    <mehdi.sakout.fancybuttons.FancyButton

        android:id="@+id/btn_try_agin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        android:layout_gravity="center"
        fancy:fb_defaultColor="#273E47"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_fontIconResource="&#xf0e2;"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="3dp"
        android:onClick="BackToMain"
        android:layout_marginTop="16dp"
        fancy:fb_text="@string/tryagin"
        android:layout_below="@id/tvmessgae"
        fancy:fb_textColor="#FFFFFF" />
</RelativeLayout>
